--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calculator",
   "version": "0.1.0",
+  "homepage": "https://sachinadk2011-calculator.com",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -16,6 +17,8 @@
     "postcss": "^8.4.49"
   },
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   }
